--- a/Weight_Convertor.html
+++ b/Weight_Convertor.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html lang="en">
+<!-- This is my Weight Converter. This can be used to help with conversions of weight from pounds to the metric system -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
