--- a/Weight_Convertor.html
+++ b/Weight_Convertor.html
@@ -10,8 +10,8 @@
   <style>
     body{
       margin-top:70px;
-      background:#333;
-      color:#fff;
+      background:rgb(241, 8, 8);
+      color:rgb(0, 225, 255);
     }
   </style>
   <title>Weight Converter</title>
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 offset-md-3">
         <h1 class="display-4 text-center mb-3">Weight Converter</h1>
         <form>
           <div class="form-group">
@@ -27,7 +27,7 @@
             id="lbsInput"
             type="number" 
             class="form control form-control-lg"
-            placeholder="Enter Pounds...">
+            placeholder="Enter Pounds number:">
           </div>
         </form>
         <div id="output">
@@ -57,9 +57,13 @@
     </div>
   
     <script>
+      document.getElementById('output').style.visibility = 'hidden';
       document.getElementById('lbsInput').addEventListener('input', function(e){
+        document.getElementById('output').style.visibility = 'visible';
         let lbs = e.target.value;
-        document.getElementById('gramsOutput').innerHTML = lbs/ 0.0022046;
+        document.getElementById('gramsOutput').innerHTML = lbs/0.0022046;
+        document.getElementById('kgOutput').innerHTML = lbs/2.2046;
+        document.getElementById('ozOutput').innerHTML = lbs*16;
       })
     </script>
 </body>
