Commit test to visual source code repo

--- a/Calculator.html
+++ b/Calculator.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <!-- This is my Weight Converter. This can be used to help with conversions of weight from pounds to the metric system -->
+  <!--Comment-->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
