Used Emmet to create a new tempelate

--- a/Tempelate.html
+++ b/Tempelate.html
@@ -1,21 +1,12 @@
-<!DOCTYPE html>
-
-<html lang="en">
 <!-- This is a tempelate. Take what you need and delete what you don't -->
-
+<!DOCTYPE html>
+<html lang="en">
 <head>
- 
-  <style>
-
-  </style>
-  <title>Weight Converter</title>
-
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
   
-    <script>
-
-    </script>
-
 </body>
 </html>
