finished css and html and started java

--- a/weather.html
+++ b/weather.html
@@ -17,6 +17,11 @@
                 <div class="city">Downingtown, PA, USA</div>
                 <div class="date">Tuesday April 7 2020</div>
             </section>
+            <div class="current">
+                <div class="temp">70<span>°F</span></div>
+                <div class="weather">Rainy</div>
+                <div class="hi-low">55°F / 70°F</div>
+            </div>
         </main>
     </div>
     <script src="weather.js"></script>
