--- a/voice.html
+++ b/voice.html
@@ -5,35 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  
+  <style>
+    body {
+      background: #141414;
+    }
+  </style>
 
   <title>Type-N-Listen</title>
 </head>
-<body class="bg-dark text-white" >
-    <div class="container text-center">
-        <div class="row">
-            <div class="col-md-6 mx-auto">
-                <form>
-                   <div class="form-group">
-                     <textarea name="" id="text-input" class="form-control form-control-lg" placeholder="Type whatever you want here"></textarea>
-                   </div> 
-                   <div class="form-group">
-                       <label for="rate">Rate</label>
-                       <div id="rate-value" class="badge badge-primary float-right">1</div>
-                       <input type="range" id="rate" class="custom-range" min="0.5" max="2" value="1" step="0.1">
-                   </div>
-                   <div class="form-group">
-                    <label for="pitch">Pitch</label>
-                    <div id="pitch-value" class="badge badge-primary float-right">1</div>
-                    <input type="range" id="pitch" class="custom-range" min="0" max="2" value="1" step="0.1">
-                </div>
-                <div class="form-group">
-                    <select id="voice-select" class="form-control form-control-lg"></select>
-                </div>
-                <button class="btn btn-light btn-lg btn-block">Submit</button>
-                </form>
-            </div>
-        </div>
-    </div>
+ <body class="text-white">
+   <div class="container text-center">
+       <div class="row">
+           <div class="col-md-6 mx-auto">
+               <form class="mb-5">
+                  <div class="form-group">
+                    <textarea name="" id="text-input" class="form-control form-control-lg" placeholder="Type whatever you want here"></textarea>
+                  </div> 
+                  <div class="form-group">
+                      <label for="rate">Rate</label>
+                      <div id="rate-value" class="badge badge-primary float-right">1</div>
+                      <input type="range" id="rate" class="custom-range" min="0.5" max="2" value="1" step="0.1">
+                  </div>
+                  <div class="form-group">
+                   <label for="pitch">Pitch</label>
+                   <div id="pitch-value" class="badge badge-primary float-right">1</div>
+                   <input type="range" id="pitch" class="custom-range" min="0" max="2" value="1" step="0.1">
+               </div>
+               <div class="form-group">
+                   <select id="voice-select" class="form-control form-control-lg"></select>
+               </div>
+               <button class="btn btn-light btn-lg btn-block">Submit</button>
+               </form>
+             
+               <p class="text-secondary"> Note: This app uses the Web Speech API which is experimental and may not fully work in some versions of certain browsers</p>
+           </div>
+       </div>
+   </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
