--- a/rps.html
+++ b/rps.html
@@ -29,8 +29,8 @@
         <div class="match fadeOut">
             <h2 class="winner">Choose an option</h2>
             <div class="hands">
-                <img class="player-hand" src="https://cdn.mrplates.com/assets/images/11/cb/c6/11cbc6db499311ea8f0106569326b311/800x600.png">
-                <img class="computer-hand" src="https://cdn.mrplates.com/assets/images/11/cb/c6/11cbc6db499311ea8f0106569326b311/800x600.png">
+                <img class="player-hand" src="rock.png" alt="" />
+                <img class="computer-hand" src="rock.png" alt="" />
             </div>
             <div class="options">
                 <button class="rock">rock</button>
