worked on javascript for geo

--- a/geo.html
+++ b/geo.html
@@ -18,7 +18,10 @@
                     address:location,
                     key:'AIzaSyCMhq5HCBYzkjF4MSZoaPt6bCyZ5uxNafk'
                 }
-            }); 
+            })
+            .then(function(response){
+                console.log
+            })
         }
     </script>
 </body>
