Organized Files + Renamed Files

--- a/Circles (Illusion)/index.html
+++ b/Circles (Illusion)/index.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="circles.css">
+<link rel="stylesheet" href="style.css">
 <div class="container">
     <div class="circle"></div>
     <div class="circle"></div>
@@ -62,4 +62,4 @@
     <div class="circle"></div>
     <div class="circle"></div>
 </div>
-<script src="circles.js"></script>
+<script src="script.js"></script>
