--- a/Dad Jokes/index.html
+++ b/Dad Jokes/index.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1>Try Not to Laugh 😅😅😅</h1>
+    <h1>DAD JOKES (Try Not to Laugh 😅😅😅)</h1>
     <div id="joke" class="joke">
         // Joke is here
     </div>
@@ -7,5 +7,5 @@
         Want Another One
     </button>
 </div>
-<link rel="stylesheet" href="jokes.css">
-<script src="jokes.js"></script>
+<link rel="stylesheet" href="style.css">
+<script src="script.js"></script>
