--- a/Breathing Exercise/index.html
+++ b/Breathing Exercise/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="relax.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Relaxer</title>
   </head>
   <body>
@@ -22,6 +22,6 @@
       <div class="gradient-circle"></div>
     </div>
 
-    <script src="relax.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
