--- a/Fixable/Work in Progress/index.html
+++ b/Fixable/Work in Progress/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Useful Things</title>
-    <link rel="stylesheet" href="Useful_Things.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
    <nav>
