--- a/Hangman/index.html
+++ b/Hangman/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="hangman2.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Hangman</title>
   </head>
   <body>
@@ -51,6 +51,6 @@
       <p>You have already entered this letter</p>
     </div>
 
-    <script src="hangman2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
