--- a/Rock Paper Scissors/index.html
+++ b/Rock Paper Scissors/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="rps.css">
+    <link rel="stylesheet" href="style.css">
     <title>Rock Paper Scissors</title>
 </head>
 <body>
@@ -40,6 +40,6 @@
         </div>
     </section>
 
-    <script src="rps.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
