--- a/Shooting (Game)/index.html
+++ b/Shooting (Game)/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Shooting Game</title>
 
-    <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <canvas width="1000" height="800" id="game"></canvas>
-    <script src="game.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
